Bug 153636 - "Use level from source chapter" does not work for Graphics, Frames, and OLE Objects in User-defined index
Summary: "Use level from source chapter" does not work for Graphics, Frames, and OLE O...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.2.0 target:24.8.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: TableofContents-Indexes TableofContents-Indexes-Dialog
  Show dependency treegraph
 
Reported: 2023-02-15 13:39 UTC by sdc.blanco
Modified: 2024-11-11 16:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Test File with tables, images and frames and a user-defined index (57.01 KB, application/vnd.oasis.opendocument.text)
2023-02-15 13:39 UTC, sdc.blanco
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2023-02-15 13:39:26 UTC
Created attachment 185380 [details]
Test File with tables, images and frames and a user-defined index

Basic problem:
"Use level from source chapter" does not work for Graphics and Frames in User-defined index with 7.6.0.0, but does work in 7.2.7.2

Attached file (created in 7.6) provides some headings at different outline levels, some tables, a frame, an image, and a user-defined index.

1. Edit Index
2. Uncheck "Use level from source chapter"
3. Update Index

Actual and Expected:  No indenting according to heading outline level.

4. Edit Index
5. Check "Use level from source chapter"
6. Update Index

Actual:  Frame and Image are not indented according to outline level.  Table is.
Expected: Frame and Image are indented according to outline level.

Tested with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d466df5bc220eb80b8a51ff64507de881b938ed3
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: da-DK (da_DK); UI: en-US
Calc: CL threaded

7.  The attached file (created in 7.6) was opened with 7.2.7.2. 

Actual and expected:  Entries for Frame, Image, and Table are indented according to their position in relation to the heading outline level, if "Use level from source chapter" is checked.

Additional information:

Did not test with OLE Objects.
Comment 1 Dieter 2023-03-02 07:43:21 UTC
I miss help about "Use level from source chapter", so I'm not sure about expected result.

As far as I understand:
"Heading OL 2" is PS Heading 5 (= chapter level 5)
"Heading OL 3" is PS Heading 2 (= chapter level 2)


So table 1 and figure should have same indent and table 2 and image, correct? If this is the expected result, I confirm the bug.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ab20dba30769a5a52830220daa347772485db6a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded
Comment 2 sdc.blanco 2023-03-02 10:01:44 UTC
(In reply to Dieter from comment #1)
> I miss help about "Use level from source chapter", so I'm not sure about
> expected result.
[1] https://help.libreoffice.org/7.6/en-US/text/swriter/01/04120215.html?System=WIN&DbPAR=WRITER&HID=modules/swriter/ui/tocindexpage/uselevel#bm_id3149106

> As far as I understand:
> "Heading OL 2" is PS Heading 5 (= chapter level 5)
> "Heading OL 3" is PS Heading 2 (= chapter level 2)
Almost. "Heading OL 2" is "outline level 5" 
but  "Heading OL 3" is "outline level 3"
 
> So table 1 and figure should have same indent and table 2 and image,
> correct? 
Table 1 and Frame 1 should have same indent (to index level 5, because that is the outline level of their immediately prior heading).

and

Image1 and table 2 (which is displayed as FirstTable, because the Name property is displayed) should have the same indent (to index level 3), because their immediately prior heading has outline level 3.

In the generated index, you can see that the second "table" entry (level 3) is less indented than the first table entry (level 5), while Frame and Graphics/image remain at level 1  (contra the indication in "online help").
Comment 3 sdc.blanco 2023-03-09 12:44:09 UTC
(In reply to sdc.blanco from comment #0)
> Did not test with OLE Objects.
Did not work with OLE objects (i.e., outline level of heading before an OLE object did not change the index level of the entry for that object, when "Use level from source chapter" is selected).  Will update bug summary.
Comment 4 Dieter 2023-03-11 10:03:12 UTC Comment hidden (off-topic)
Comment 5 Dieter 2023-03-11 10:04:23 UTC Comment hidden (off-topic)
Comment 6 Buovjaga 2024-09-19 10:20:27 UTC
(In reply to sdc.blanco from comment #0)
> Created attachment 185380 [details]
> Test File with tables, images and frames and a user-defined index
> 
> Basic problem:
> "Use level from source chapter" does not work for Graphics and Frames in
> User-defined index with 7.6.0.0, but does work in 7.2.7.2

There should have been regression, bibisectRequest keywords in this report.

Changed in 7.5 with ba58fc11723b7c9d370d6407385ea0e8829db099
tdf#151462 - Search for outline node containing the current node
Comment 7 Andreas Heinisch 2024-09-20 05:41:29 UTC
Could this be the route cause [1] or is it really the commit from [2]?

[1] https://bugs.documentfoundation.org/show_bug.cgi?id=151462#c3
[2] https://bugs.documentfoundation.org/show_bug.cgi?id=153636#c6
Comment 8 Commit Notification 2024-11-05 06:44:36 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a2c4dddf51c0d6ab726a8854123887bbfa7792a

tdf#153636 - Search for outline node only if index is for the current chapter

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-11-11 16:31:00 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/5b864851f6c1c88674b6c2ad07215d62249f47ac

tdf#153636 - Search for outline node only if index is for the current chapter

It will be available in 24.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.