tdf#153636 - Search for outline node only if index is for the current chapter

Otherwise, "Use level from source chapter" does not work for Graphics and Frames in user-defined indices.

Change-Id: I148a097276cf8a60d69a208266ceb9def0444654
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175783
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>